# hw-limiter

./: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  SUPPORTED_TARGETS.md
include/: AppState.hpp  BenchmarkRunner.hpp  BenchmarkTypes.hpp  HardwareInfo.hpp  MainWindow.hpp  PowerThrottler.hpp  ProfileEngine.hpp  ProfileLoader.hpp  SimpleJson.hpp
resources/: profiles.json
scripts/: generate_profiles.py
src/: BenchmarkRunner.cpp  HardwareInfo.cpp  MainWindow.cpp  PowerThrottler.cpp  ProfileEngine.cpp  ProfileLoader.cpp  main.cpp
